// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced tests of app  Selecting the type of radio buttons (radios), add fields and input values then change the type (text) 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value\\",\\"type\\":\\"text\\"}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Advanced tests of app  Selecting the type of radio buttons (select), add fields and input values 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
      <div>
        <label>
          ADD MORE OPTIONS
        </label>
        <form
          className="options-form"
        >
          <button
            className="button-option"
            onClick={[Function]}
          >
            ADD
          </button>
          <div>
            <label>
              Value
            </label>
            <input
              className="input-option"
              onChange={[Function]}
              type="text"
              value="1"
            />
            <input
              className="button-option"
              onClick={[Function]}
              type="button"
              value="DELETE"
            />
          </div>
          <div>
            <label>
              Value
            </label>
            <input
              className="input-option"
              onChange={[Function]}
              type="text"
              value="2"
            />
            <input
              className="button-option"
              onClick={[Function]}
              type="button"
              value="DELETE"
            />
          </div>
          <div>
            <label>
              Value
            </label>
            <input
              className="input-option"
              onChange={[Function]}
              type="text"
              value="3"
            />
            <input
              className="button-option"
              onClick={[Function]}
              type="button"
              value="DELETE"
            />
          </div>
        </form>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value\\",\\"type\\":\\"select\\",\\"options\\":[\\"1\\",\\"2\\",\\"3\\"]}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Advanced tests of app  Selecting the type of radio buttons (select), add fields and input values then click cancel button 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value="Click here to for input text"
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value=" "
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
      <div>
        <label>
          ADD MORE OPTIONS
        </label>
        <form
          className="options-form"
        >
          <button
            className="button-option"
            onClick={[Function]}
          >
            ADD
          </button>
        </form>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\" \\",\\"type\\":\\"select\\",\\"options\\":[]}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Advanced tests of app  Selecting the type of radio buttons (select), add fields and input values then click save button 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value={
        Object {
          "label": "Label Value",
          "options": Array [
            "1",
            "2",
            "3",
          ],
          "type": "select",
        }
      }
    />
  </div>
</div>
`;

exports[`Advanced tests of app  Selecting the type of radio buttons (select), add fields and input values then remove one field 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
      <div>
        <label>
          ADD MORE OPTIONS
        </label>
        <form
          className="options-form"
        >
          <button
            className="button-option"
            onClick={[Function]}
          >
            ADD
          </button>
          <div>
            <label>
              Value
            </label>
            <input
              className="input-option"
              onChange={[Function]}
              type="text"
              value="1"
            />
            <input
              className="button-option"
              onClick={[Function]}
              type="button"
              value="DELETE"
            />
          </div>
          <div>
            <label>
              Value
            </label>
            <input
              className="input-option"
              onChange={[Function]}
              type="text"
              value="3"
            />
            <input
              className="button-option"
              onClick={[Function]}
              type="button"
              value="DELETE"
            />
          </div>
        </form>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value\\",\\"type\\":\\"select\\",\\"options\\":[\\"1\\",\\"3\\"]}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Basic test fof showing overlay Open overlay and input value of label 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value\\",\\"type\\":\\"\\"}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Selecting the type of radio buttons Select type checkbox 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value checkbox"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value checkbox\\",\\"type\\":\\"checkbox\\"}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Selecting the type of radio buttons Select type radios 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value radios"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
      <div>
        <label>
          ADD MORE OPTIONS
        </label>
        <form
          className="options-form"
        >
          <button
            className="button-option"
            onClick={[Function]}
          >
            ADD
          </button>
        </form>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value radios\\",\\"type\\":\\"radios\\",\\"options\\":[]}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Selecting the type of radio buttons Select type select 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value select"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
      <div>
        <label>
          ADD MORE OPTIONS
        </label>
        <form
          className="options-form"
        >
          <button
            className="button-option"
            onClick={[Function]}
          >
            ADD
          </button>
        </form>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value select\\",\\"type\\":\\"select\\",\\"options\\":[]}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Selecting the type of radio buttons Select type text 1`] = `
<div>
  <div
    className="input-conntainer"
  >
    <input
      className="input-field"
      onClick={[Function]}
      placeholder="Click here to for input text"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="overlay"
    style={
      Object {
        "width": 500,
      }
    }
  >
    <h2>
      Fill the form
    </h2>
    <label
      className="label"
    >
      Label:
      <input
        onChange={[Function]}
        type="text"
        value="Label value text"
      />
    </label>
    <div
      className="inputForm"
    >
      <div>
        Type
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="text"
            name="type"
            onChange={[Function]}
            type="radio"
            value="text"
          />
          <label
            htmlFor="text"
          >
            Textfiled
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="checkbox"
            name="type"
            onChange={[Function]}
            type="radio"
            value="checkbox"
          />
          <label
            htmlFor="checkbox"
          >
            CheckBox
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="select"
            name="type"
            onChange={[Function]}
            type="radio"
            value="select"
          />
          <label
            htmlFor="select"
          >
            Select
          </label>
        </div>
        <div
          className="inputForm"
        >
          <input
            checked={false}
            id="radios"
            name="type"
            onChange={[Function]}
            type="radio"
            value="radios"
          />
          <label
            htmlFor="radios"
          >
            Radios
          </label>
        </div>
      </div>
    </div>
    <textarea
      className="text-area"
      onChange={[Function]}
      value="{\\"label\\":\\"Label value text\\",\\"type\\":\\"text\\"}"
    />
    <button
      className="button"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;
